sit at the chess board and play with yourself